--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
           username: '${{ secrets.ftp_username }}'
           password: '${{ secrets.ftp_password }}'
           server-dir: /site/wwwroot/
-          dry-run: true
           log-level: verbose
           exclude: |
             **/.git*
             **/.git*/**
             **/node_modules/**
+            **/.vscode/**
