--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
       - name: "\U0001F4C2 Sync files"
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: '${{ secrets.server_host }}'
-          username: '${{ secrets.ftp_username }}'
-          password: '${{ secrets.ftp_password }}'
+          server: "${{ secrets.server_host }}"
+          username: "${{ secrets.ftp_username }}"
+          password: "${{ secrets.ftp_password }}"
           server-dir: /site/wwwroot/
           log-level: verbose
           exclude: |
