--- a/package.json
+++ b/package.json
@@ -6,5 +6,18 @@
   "repository": "https://github.com/darwin911/jcc",
   "author": "Darwin Smith <darwinpsmith@gmail.com>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "lint": "prettier --check .",
+    "format": "prettier --write ."
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn format && git add -A ."
+    }
+  },
+  "devDependencies": {
+    "husky": "^8.0.3",
+    "prettier": "^3.1.0"
+  }
 }
