chore: update precommit scripts

--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "scripts": {
     "lint": "prettier --check .",
     "format": "prettier --write .",
+    "lint:commits": "commitlint --from=HEAD~1",
     "prepare": "husky install"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn format && git add -A ."
+      "pre-commit": "yarn lint:commits && yarn format && git add -A ."
     }
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "husky": "^8.0.3",
     "prettier": "^3.1.0"
   }
