--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "lint": "prettier --check .",
-    "format": "prettier --write .",
-    "lint:commits": "commitlint --from=HEAD~1",
-    "prepare": "husky install"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
+    "@types/node": "20.10.5",
+    "@types/react": "^18.2.45",
     "husky": "^8.0.3",
-    "prettier": "^3.1.0"
+    "prettier": "^3.1.0",
+    "typescript": "5.3.3"
+  },
+  "dependencies": {
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
