--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@types/node": "20.10.5",
     "@types/react": "^18.2.45",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
     "husky": "^8.0.3",
     "prettier": "^3.1.0",
     "typescript": "5.3.3"
