--- a/package.json
+++ b/package.json
@@ -16,15 +16,23 @@
   "devDependencies": {
     "@types/node": "20.10.5",
     "@types/react": "^18.2.45",
+    "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "husky": "^8.0.3",
+    "postcss": "^8.4.32",
     "prettier": "^3.1.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "5.3.3"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.0"
   }
 }
