feat: implements server side redirect to / for /campaign and /henn-campaign routes

--- a/web.config
+++ b/web.config
@@ -12,5 +12,16 @@
         <mimeMap fileExtension=".json" mimeType="application/json" />
         <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
     </staticContent>
+     <rewrite>
+            <rules>
+                <rule name="RedirectToRootCampaign" stopProcessing="true">
+                    <match url="^(campaign|henn-campaign)\.html$" />
+                    <conditions>
+                        <!-- Add any conditions if needed -->
+                    </conditions>
+                    <action type="Redirect" url="/" />
+                </rule>
+            </rules>
+        </rewrite>
     </system.webServer>
 </configuration>
